zamna-spin/bindings/http_trigger.h

typedef struct http_trigger_string_t {
  uint8_t*ptr;
  size_t len;
} http_trigger_string_t;
typedef struct wasi_io_0_2_0_streams_own_input_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_input_stream_t;
typedef struct wasi_io_0_2_0_streams_own_output_stream_t {
  int32_t __handle;
} wasi_io_0_2_0_streams_own_output_stream_t;
typedef struct {
  uint8_t *ptr;
  size_t len;
} http_trigger_list_u8_t;
typedef struct {
  http_trigger_string_t *ptr;
  size_t len;
} http_trigger_list_string_t;
typedef struct fermyon_spin_2_0_0_sqlite_own_connection_t {
  int32_t __handle;
} fermyon_spin_2_0_0_sqlite_own_connection_t;
// The set of errors which may be raised by functions in this interface
typedef struct fermyon_spin_2_0_0_sqlite_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     io;
  } val;
} fermyon_spin_2_0_0_sqlite_error_t;
// A single column's result from a database query
typedef struct fermyon_spin_2_0_0_sqlite_value_t {
  uint8_t tag;
  union {
    int64_t     integer;
    double     real;
    http_trigger_string_t     text;
    http_trigger_list_u8_t     blob;
  } val;
} fermyon_spin_2_0_0_sqlite_value_t;
typedef struct {
  fermyon_spin_2_0_0_sqlite_value_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_sqlite_list_value_t;
// A set of values for each of the columns in a query-result
typedef struct fermyon_spin_2_0_0_sqlite_row_result_t {
  fermyon_spin_2_0_0_sqlite_list_value_t   values;
} fermyon_spin_2_0_0_sqlite_row_result_t;
typedef struct {
  fermyon_spin_2_0_0_sqlite_row_result_t *ptr;
  size_t len;
} fermyon_spin_2_0_0_sqlite_list_row_result_t;
// A result of a query
typedef struct fermyon_spin_2_0_0_sqlite_query_result_t {
  // The names of the columns retrieved in the query
  http_trigger_list_string_t   columns;
  // the row results each containing the values for all the columns for a given row
  fermyon_spin_2_0_0_sqlite_list_row_result_t   rows;
} fermyon_spin_2_0_0_sqlite_query_result_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_sqlite_own_connection_t ok;
    fermyon_spin_2_0_0_sqlite_error_t err;
  } val;
} fermyon_spin_2_0_0_sqlite_result_own_connection_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_sqlite_query_result_t ok;
    fermyon_spin_2_0_0_sqlite_error_t err;
  } val;
} fermyon_spin_2_0_0_sqlite_result_query_result_error_t;
typedef struct fermyon_spin_2_0_0_key_value_own_store_t {
  int32_t __handle;
} fermyon_spin_2_0_0_key_value_own_store_t;
typedef struct fermyon_spin_2_0_0_key_value_borrow_store_t {
  int32_t __handle;
} fermyon_spin_2_0_0_key_value_borrow_store_t;
// The set of errors which may be raised by functions in this interface
typedef struct fermyon_spin_2_0_0_key_value_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_key_value_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_key_value_own_store_t ok;
    fermyon_spin_2_0_0_key_value_error_t err;
  } val;
} fermyon_spin_2_0_0_key_value_result_own_store_error_t;
typedef struct {
  bool is_some;
  http_trigger_list_u8_t val;
} http_trigger_option_list_u8_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_option_list_u8_t ok;
    fermyon_spin_2_0_0_key_value_error_t err;
  } val;
} fermyon_spin_2_0_0_key_value_result_option_list_u8_error_t;
typedef struct {
  bool is_err;
  union {
    fermyon_spin_2_0_0_key_value_error_t err;
  } val;
} fermyon_spin_2_0_0_key_value_result_void_error_t;
typedef struct {
  bool is_err;
  union {
    bool ok;
    fermyon_spin_2_0_0_key_value_error_t err;
  } val;
} fermyon_spin_2_0_0_key_value_result_bool_error_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_list_string_t ok;
    fermyon_spin_2_0_0_key_value_error_t err;
  } val;
} fermyon_spin_2_0_0_key_value_result_list_string_error_t;
// The set of errors which may be raised by functions in this interface.
typedef struct fermyon_spin_2_0_0_variables_error_t {
  uint8_t tag;
  union {
    http_trigger_string_t     invalid_name;
    http_trigger_string_t     undefined;
    http_trigger_string_t     provider;
    http_trigger_string_t     other;
  } val;
} fermyon_spin_2_0_0_variables_error_t;
typedef struct {
  bool is_err;
  union {
    http_trigger_string_t ok;
    fermyon_spin_2_0_0_variables_error_t err;
  } val;
} fermyon_spin_2_0_0_variables_result_string_error_t;
typedef struct {
  http_trigger_string_t f0;
  http_trigger_string_t f1;
} http_trigger_tuple2_string_string_t;
typedef struct {
  http_trigger_tuple2_string_string_t *ptr;
  size_t len;
} http_trigger_list_tuple2_string_string_t;
typedef struct {
  bool is_err;
} wasi_cli_0_2_0_exit_result_void_void_t;
typedef wasi_io_0_2_0_streams_own_input_stream_t wasi_cli_0_2_0_stdin_own_input_stream_t;
typedef wasi_io_0_2_0_streams_own_output_stream_t wasi_cli_0_2_0_stdout_own_output_stream_t;
typedef wasi_io_0_2_0_streams_own_output_stream_t wasi_cli_0_2_0_stderr_own_output_stream_t;
typedef struct wasi_cli_0_2_0_terminal_input_own_terminal_input_t {
  int32_t __handle;
} wasi_cli_0_2_0_terminal_input_own_terminal_input_t;
typedef struct wasi_cli_0_2_0_terminal_input_borrow_terminal_input_t {
  int32_t __handle;
} wasi_cli_0_2_0_terminal_input_borrow_terminal_input_t;
typedef struct wasi_cli_0_2_0_terminal_output_own_terminal_output_t {
  int32_t __handle;
} wasi_cli_0_2_0_terminal_output_own_terminal_output_t;
typedef struct wasi_cli_0_2_0_terminal_output_borrow_terminal_output_t {
  int32_t __handle;
} wasi_cli_0_2_0_terminal_output_borrow_terminal_output_t;
typedef wasi_cli_0_2_0_terminal_input_own_terminal_input_t wasi_cli_0_2_0_terminal_stdin_own_terminal_input_t;
typedef struct {
  bool is_some;
  wasi_cli_0_2_0_terminal_stdin_own_terminal_input_t val;
} wasi_cli_0_2_0_terminal_stdin_option_own_terminal_input_t;
typedef wasi_cli_0_2_0_terminal_output_own_terminal_output_t wasi_cli_0_2_0_terminal_stdout_own_terminal_output_t;
typedef struct {
  bool is_some;
  wasi_cli_0_2_0_terminal_stdout_own_terminal_output_t val;
} wasi_cli_0_2_0_terminal_stdout_option_own_terminal_output_t;
typedef wasi_cli_0_2_0_terminal_output_own_terminal_output_t wasi_cli_0_2_0_terminal_stderr_own_terminal_output_t;
typedef struct {
  bool is_some;
  wasi_cli_0_2_0_terminal_stderr_own_terminal_output_t val;
} wasi_cli_0_2_0_terminal_stderr_option_own_terminal_output_t;
// A time and date in seconds plus nanoseconds.
typedef struct wasi_clocks_0_2_0_wall_clock_datetime_t {
  uint64_t   seconds;
  uint32_t   nanoseconds;
} wasi_clocks_0_2_0_wall_clock_datetime_t;
typedef wasi_clocks_0_2_0_wall_clock_datetime_t wasi_filesystem_0_2_0_types_datetime_t;
// File size or length of a region within a file.
typedef uint64_t wasi_filesystem_0_2_0_types_filesize_t;
// The type of a filesystem object referenced by a descriptor.
// 
// Note: This was called `filetype` in earlier versions of WASI.
typedef uint8_t wasi_filesystem_0_2_0_types_descriptor_type_t;
// Descriptor flags.
// 
// Note: This was called `fdflags` in earlier versions of WASI.
typedef uint8_t wasi_filesystem_0_2_0_types_descriptor_flags_t;
// Flags determining the method of how paths are resolved.
typedef uint8_t wasi_filesystem_0_2_0_types_path_flags_t;
// Open flags used by `open-at`.
typedef uint8_t wasi_filesystem_0_2_0_types_open_flags_t;
// Number of hard links to an inode.
typedef uint64_t wasi_filesystem_0_2_0_types_link_count_t;
typedef struct {
  bool is_some;
  wasi_filesystem_0_2_0_types_datetime_t val;
} wasi_filesystem_0_2_0_types_option_datetime_t;
// File attributes.
// 
// Note: This was called `filestat` in earlier versions of WASI.
typedef struct wasi_filesystem_0_2_0_types_descriptor_stat_t {
  // File type.
  wasi_filesystem_0_2_0_types_descriptor_type_t   type;
  // Number of hard links to the file.
  wasi_filesystem_0_2_0_types_link_count_t   link_count;
  // For regular files, the file size in bytes. For symbolic links, the
  // length in bytes of the pathname contained in the symbolic link.
  wasi_filesystem_0_2_0_types_filesize_t   size;
  // Last data access timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain an access
  // timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   data_access_timestamp;
  // Last data modification timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain a
  // modification timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   data_modification_timestamp;
  // Last file status-change timestamp.
  // 
  // If the `option` is none, the platform doesn't maintain a
  // status-change timestamp for this file.
  wasi_filesystem_0_2_0_types_option_datetime_t   status_change_timestamp;
} wasi_filesystem_0_2_0_types_descriptor_stat_t;
// When setting a timestamp, this gives the value to set it to.
typedef struct wasi_filesystem_0_2_0_types_new_timestamp_t {
  uint8_t tag;
  union {
    wasi_filesystem_0_2_0_types_datetime_t     timestamp;
  } val;
} wasi_filesystem_0_2_0_types_new_timestamp_t;
// A directory entry.
typedef struct wasi_filesystem_0_2_0_types_directory_entry_t {
  // The type of the file referred to by this directory entry.
  wasi_filesystem_0_2_0_types_descriptor_type_t   type;
  // The name of the object.
  http_trigger_string_t   name;
} wasi_filesystem_0_2_0_types_directory_entry_t;
// Error codes returned by functions, similar to `errno` in POSIX.
// Not all of these error codes are returned by the functions provided by this
// API; some are used in higher-level library layers, and others are provided
// merely for alignment with POSIX.
typedef uint8_t wasi_filesystem_0_2_0_types_error_code_t;
// File or memory access pattern advisory information.
typedef uint8_t wasi_filesystem_0_2_0_types_advice_t;