zamna-spin/.zig-cache/o/74caa4b4e0853821cf59f10746e95f75/cimport.zig

const union_unnamed_47 = extern union {
    integer: i64,
    real: f64,
    text: http_trigger_string_t,
    blob: http_trigger_list_u8_t,
};
pub const struct_fermyon_spin_2_0_0_sqlite_value_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_47 = @import("std").mem.zeroes(union_unnamed_47),
};
pub const fermyon_spin_2_0_0_sqlite_value_t = struct_fermyon_spin_2_0_0_sqlite_value_t;
pub const fermyon_spin_2_0_0_sqlite_list_value_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_sqlite_value_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_sqlite_value_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const struct_fermyon_spin_2_0_0_sqlite_row_result_t = extern struct {
    values: fermyon_spin_2_0_0_sqlite_list_value_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_sqlite_list_value_t),
};
pub const fermyon_spin_2_0_0_sqlite_row_result_t = struct_fermyon_spin_2_0_0_sqlite_row_result_t;
pub const fermyon_spin_2_0_0_sqlite_list_row_result_t = extern struct {
    ptr: [*c]fermyon_spin_2_0_0_sqlite_row_result_t = @import("std").mem.zeroes([*c]fermyon_spin_2_0_0_sqlite_row_result_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const struct_fermyon_spin_2_0_0_sqlite_query_result_t = extern struct {
    columns: http_trigger_list_string_t = @import("std").mem.zeroes(http_trigger_list_string_t),
    rows: fermyon_spin_2_0_0_sqlite_list_row_result_t = @import("std").mem.zeroes(fermyon_spin_2_0_0_sqlite_list_row_result_t),
};
pub const fermyon_spin_2_0_0_sqlite_query_result_t = struct_fermyon_spin_2_0_0_sqlite_query_result_t;
const union_unnamed_48 = extern union {
    ok: fermyon_spin_2_0_0_sqlite_own_connection_t,
    err: fermyon_spin_2_0_0_sqlite_error_t,
};
pub const fermyon_spin_2_0_0_sqlite_result_own_connection_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_48 = @import("std").mem.zeroes(union_unnamed_48),
};
const union_unnamed_49 = extern union {
    ok: fermyon_spin_2_0_0_sqlite_query_result_t,
    err: fermyon_spin_2_0_0_sqlite_error_t,
};
pub const fermyon_spin_2_0_0_sqlite_result_query_result_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_49 = @import("std").mem.zeroes(union_unnamed_49),
};
pub const struct_fermyon_spin_2_0_0_key_value_own_store_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_key_value_own_store_t = struct_fermyon_spin_2_0_0_key_value_own_store_t;
pub const struct_fermyon_spin_2_0_0_key_value_borrow_store_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const fermyon_spin_2_0_0_key_value_borrow_store_t = struct_fermyon_spin_2_0_0_key_value_borrow_store_t;
const union_unnamed_50 = extern union {
    other: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_key_value_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_50 = @import("std").mem.zeroes(union_unnamed_50),
};
pub const fermyon_spin_2_0_0_key_value_error_t = struct_fermyon_spin_2_0_0_key_value_error_t;
const union_unnamed_51 = extern union {
    ok: fermyon_spin_2_0_0_key_value_own_store_t,
    err: fermyon_spin_2_0_0_key_value_error_t,
};
pub const fermyon_spin_2_0_0_key_value_result_own_store_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_51 = @import("std").mem.zeroes(union_unnamed_51),
};
pub const http_trigger_option_list_u8_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: http_trigger_list_u8_t = @import("std").mem.zeroes(http_trigger_list_u8_t),
};
const union_unnamed_52 = extern union {
    ok: http_trigger_option_list_u8_t,
    err: fermyon_spin_2_0_0_key_value_error_t,
};
pub const fermyon_spin_2_0_0_key_value_result_option_list_u8_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_52 = @import("std").mem.zeroes(union_unnamed_52),
};
const union_unnamed_53 = extern union {
    err: fermyon_spin_2_0_0_key_value_error_t,
};
pub const fermyon_spin_2_0_0_key_value_result_void_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_53 = @import("std").mem.zeroes(union_unnamed_53),
};
const union_unnamed_54 = extern union {
    ok: bool,
    err: fermyon_spin_2_0_0_key_value_error_t,
};
pub const fermyon_spin_2_0_0_key_value_result_bool_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_54 = @import("std").mem.zeroes(union_unnamed_54),
};
const union_unnamed_55 = extern union {
    ok: http_trigger_list_string_t,
    err: fermyon_spin_2_0_0_key_value_error_t,
};
pub const fermyon_spin_2_0_0_key_value_result_list_string_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_55 = @import("std").mem.zeroes(union_unnamed_55),
};
const union_unnamed_56 = extern union {
    invalid_name: http_trigger_string_t,
    undefined: http_trigger_string_t,
    provider: http_trigger_string_t,
    other: http_trigger_string_t,
};
pub const struct_fermyon_spin_2_0_0_variables_error_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_56 = @import("std").mem.zeroes(union_unnamed_56),
};
pub const fermyon_spin_2_0_0_variables_error_t = struct_fermyon_spin_2_0_0_variables_error_t;
const union_unnamed_57 = extern union {
    ok: http_trigger_string_t,
    err: fermyon_spin_2_0_0_variables_error_t,
};
pub const fermyon_spin_2_0_0_variables_result_string_error_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
    val: union_unnamed_57 = @import("std").mem.zeroes(union_unnamed_57),
};
pub const http_trigger_tuple2_string_string_t = extern struct {
    f0: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
    f1: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
};
pub const http_trigger_list_tuple2_string_string_t = extern struct {
    ptr: [*c]http_trigger_tuple2_string_string_t = @import("std").mem.zeroes([*c]http_trigger_tuple2_string_string_t),
    len: usize = @import("std").mem.zeroes(usize),
};
pub const wasi_cli_0_2_0_exit_result_void_void_t = extern struct {
    is_err: bool = @import("std").mem.zeroes(bool),
};
pub const wasi_cli_0_2_0_stdin_own_input_stream_t = wasi_io_0_2_0_streams_own_input_stream_t;
pub const wasi_cli_0_2_0_stdout_own_output_stream_t = wasi_io_0_2_0_streams_own_output_stream_t;
pub const wasi_cli_0_2_0_stderr_own_output_stream_t = wasi_io_0_2_0_streams_own_output_stream_t;
pub const struct_wasi_cli_0_2_0_terminal_input_own_terminal_input_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_cli_0_2_0_terminal_input_own_terminal_input_t = struct_wasi_cli_0_2_0_terminal_input_own_terminal_input_t;
pub const struct_wasi_cli_0_2_0_terminal_input_borrow_terminal_input_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_cli_0_2_0_terminal_input_borrow_terminal_input_t = struct_wasi_cli_0_2_0_terminal_input_borrow_terminal_input_t;
pub const struct_wasi_cli_0_2_0_terminal_output_own_terminal_output_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_cli_0_2_0_terminal_output_own_terminal_output_t = struct_wasi_cli_0_2_0_terminal_output_own_terminal_output_t;
pub const struct_wasi_cli_0_2_0_terminal_output_borrow_terminal_output_t = extern struct {
    __handle: i32 = @import("std").mem.zeroes(i32),
};
pub const wasi_cli_0_2_0_terminal_output_borrow_terminal_output_t = struct_wasi_cli_0_2_0_terminal_output_borrow_terminal_output_t;
pub const wasi_cli_0_2_0_terminal_stdin_own_terminal_input_t = wasi_cli_0_2_0_terminal_input_own_terminal_input_t;
pub const wasi_cli_0_2_0_terminal_stdin_option_own_terminal_input_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_cli_0_2_0_terminal_stdin_own_terminal_input_t = @import("std").mem.zeroes(wasi_cli_0_2_0_terminal_stdin_own_terminal_input_t),
};
pub const wasi_cli_0_2_0_terminal_stdout_own_terminal_output_t = wasi_cli_0_2_0_terminal_output_own_terminal_output_t;
pub const wasi_cli_0_2_0_terminal_stdout_option_own_terminal_output_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_cli_0_2_0_terminal_stdout_own_terminal_output_t = @import("std").mem.zeroes(wasi_cli_0_2_0_terminal_stdout_own_terminal_output_t),
};
pub const wasi_cli_0_2_0_terminal_stderr_own_terminal_output_t = wasi_cli_0_2_0_terminal_output_own_terminal_output_t;
pub const wasi_cli_0_2_0_terminal_stderr_option_own_terminal_output_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_cli_0_2_0_terminal_stderr_own_terminal_output_t = @import("std").mem.zeroes(wasi_cli_0_2_0_terminal_stderr_own_terminal_output_t),
};
pub const struct_wasi_clocks_0_2_0_wall_clock_datetime_t = extern struct {
    seconds: u64 = @import("std").mem.zeroes(u64),
    nanoseconds: u32 = @import("std").mem.zeroes(u32),
};
pub const wasi_clocks_0_2_0_wall_clock_datetime_t = struct_wasi_clocks_0_2_0_wall_clock_datetime_t;
pub const wasi_filesystem_0_2_0_types_datetime_t = wasi_clocks_0_2_0_wall_clock_datetime_t;
pub const wasi_filesystem_0_2_0_types_filesize_t = u64;
pub const wasi_filesystem_0_2_0_types_descriptor_type_t = u8;
pub const wasi_filesystem_0_2_0_types_descriptor_flags_t = u8;
pub const wasi_filesystem_0_2_0_types_path_flags_t = u8;
pub const wasi_filesystem_0_2_0_types_open_flags_t = u8;
pub const wasi_filesystem_0_2_0_types_link_count_t = u64;
pub const wasi_filesystem_0_2_0_types_option_datetime_t = extern struct {
    is_some: bool = @import("std").mem.zeroes(bool),
    val: wasi_filesystem_0_2_0_types_datetime_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_datetime_t),
};
pub const struct_wasi_filesystem_0_2_0_types_descriptor_stat_t = extern struct {
    type: wasi_filesystem_0_2_0_types_descriptor_type_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_descriptor_type_t),
    link_count: wasi_filesystem_0_2_0_types_link_count_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_link_count_t),
    size: wasi_filesystem_0_2_0_types_filesize_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_filesize_t),
    data_access_timestamp: wasi_filesystem_0_2_0_types_option_datetime_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_option_datetime_t),
    data_modification_timestamp: wasi_filesystem_0_2_0_types_option_datetime_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_option_datetime_t),
    status_change_timestamp: wasi_filesystem_0_2_0_types_option_datetime_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_option_datetime_t),
};
pub const wasi_filesystem_0_2_0_types_descriptor_stat_t = struct_wasi_filesystem_0_2_0_types_descriptor_stat_t;
const union_unnamed_58 = extern union {
    timestamp: wasi_filesystem_0_2_0_types_datetime_t,
};
pub const struct_wasi_filesystem_0_2_0_types_new_timestamp_t = extern struct {
    tag: u8 = @import("std").mem.zeroes(u8),
    val: union_unnamed_58 = @import("std").mem.zeroes(union_unnamed_58),
};
pub const wasi_filesystem_0_2_0_types_new_timestamp_t = struct_wasi_filesystem_0_2_0_types_new_timestamp_t;
pub const struct_wasi_filesystem_0_2_0_types_directory_entry_t = extern struct {
    type: wasi_filesystem_0_2_0_types_descriptor_type_t = @import("std").mem.zeroes(wasi_filesystem_0_2_0_types_descriptor_type_t),
    name: http_trigger_string_t = @import("std").mem.zeroes(http_trigger_string_t),
};
pub const wasi_filesystem_0_2_0_types_directory_entry_t = struct_wasi_filesystem_0_2_0_types_directory_entry_t;
pub const wasi_filesystem_0_2_0_types_error_code_t = u8;
pub const wasi_filesystem_0_2_0_types_advice_t = u8;
